TODO:
 - Allow extra attributes to be associated with assets
 - Implement css media functionality
 - More documentation

0.032 Tuesday January 22 14:01:12 PST 2008:
 - Some minor tweaking of the timing of the caching test

0.031 Tuesday January 22 13:46:39 PST 2008:
 - Fixed (hopefully) some broken tests (rep. RENEEB)

0.030 Sunday January 13 23:23:34 PST 2008:
 - Fixed "x-javascript" issue for MIME::Types older than 1.16 (rep. ITEGEBO)

0.021 Tuesday January 08 21:22:31 PST 2008:
 - Small documentation fixes 

0.02 Tuesday January 08 17:07:41 PST 2008:
 - Documentation for File::Assets, File::Asset
 - Testing for File::Assets->new with URI::ToDisk 
 - Testing for proper caching of generated assets; fixed a couple of bugs

0.01 Monday January 07 00:29:38 PST 2008:
 - Initial release